--- a/TP3/TP3.csproj
+++ b/TP3/TP3.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="FontAwesome.Sharp" Version="5.15.3" />
+    <PackageReference Include="MathNet.Numerics" Version="4.15.0" />
   </ItemGroup>
 
 </Project>
