--- a/TP3/TP3/TP3.csproj
+++ b/TP3/TP3/TP3.csproj
@@ -35,8 +35,14 @@
     <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MathNet.Numerics, Version=4.15.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\MathNet.Numerics.4.15.0\lib\net461\MathNet.Numerics.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -52,18 +58,13 @@
     <Compile Include="Distribuciones\IDistribucion.cs" />
     <Compile Include="Distribuciones\NormalConvolucion.cs" />
     <Compile Include="Distribuciones\NormalMuller.cs" />
-    <Compile Include="Distribuciones\Poisson.cs" />
+    <Compile Include="Distribuciones\PoissonDis.cs" />
     <Compile Include="Distribuciones\Uniforme.cs" />
-    <Compile Include="EstrategiasGraficoCantIntervalos\Estrategia10Intervalos.cs" />
-    <Compile Include="EstrategiasGraficoCantIntervalos\Estrategia15Intervalos.cs" />
-    <Compile Include="EstrategiasGraficoCantIntervalos\Estrategia20Intervalos.cs" />
-    <Compile Include="EstrategiasGraficoCantIntervalos\Estrategia5Intervalos.cs" />
-    <Compile Include="EstrategiasGraficoCantIntervalos\IEstrategiaGraficoCantIntervalos.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="frmGraficoChiCuadrado.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="frmGraficoChiCuadrado.Designer.cs">
+      <DependentUpon>frmGraficoChiCuadrado.cs</DependentUpon>
     </Compile>
     <Compile Include="frmNumAleatorio.cs">
       <SubType>Form</SubType>
@@ -73,6 +74,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmGraficoChiCuadrado.resx">
+      <DependentUpon>frmGraficoChiCuadrado.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmNumAleatorio.resx">
       <DependentUpon>frmNumAleatorio.cs</DependentUpon>
     </EmbeddedResource>
@@ -85,6 +89,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
