--- a/TP4/TP4.csproj
+++ b/TP4/TP4.csproj
@@ -46,14 +46,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="EstrategiaPedidos\Estrategia2.cs" />
+    <Compile Include="EstrategiaPedidos\IEstrategiaPedidos.cs" />
+    <Compile Include="frmEjercicioMontecarlo.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="frmEjercicioMontecarlo.Designer.cs">
+      <DependentUpon>frmEjercicioMontecarlo.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VectorEstado.cs" />
+    <EmbeddedResource Include="frmEjercicioMontecarlo.resx">
+      <DependentUpon>frmEjercicioMontecarlo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
