Implementación de funciones del ejercicio TP4

--- a/TP4/TP4.csproj
+++ b/TP4/TP4.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EstrategiaPedidos\Estrategia1.cs" />
     <Compile Include="EstrategiaPedidos\Estrategia2.cs" />
     <Compile Include="EstrategiaPedidos\IEstrategiaPedidos.cs" />
     <Compile Include="frmEjercicioMontecarlo.cs">
