--- a/TP5/TP5.csproj
+++ b/TP5/TP5.csproj
@@ -48,17 +48,17 @@
   <ItemGroup>
     <Compile Include="Boletero.cs" />
     <Compile Include="Cliente.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="frmSalaCine.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="frmSalaCine.Designer.cs">
+      <DependentUpon>frmSalaCine.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VectorEstado.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="frmSalaCine.resx">
+      <DependentUpon>frmSalaCine.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
