--- a/TP6/TP5.csproj
+++ b/TP6/TP5.csproj
@@ -56,11 +56,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RungeKutta.cs">
+    <Compile Include="frmRungeKutta.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="RungeKutta.Designer.cs">
-      <DependentUpon>RungeKutta.cs</DependentUpon>
+    <Compile Include="frmRungeKutta.Designer.cs">
+      <DependentUpon>frmRungeKutta.cs</DependentUpon>
     </Compile>
     <Compile Include="VectorEstado.cs" />
     <Compile Include="VectorRungeKuttaLlenado.cs" />
@@ -77,8 +77,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="RungeKutta.resx">
-      <DependentUpon>RungeKutta.cs</DependentUpon>
+    <EmbeddedResource Include="frmRungeKutta.resx">
+      <DependentUpon>frmRungeKutta.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
